--- a/src/index.scss
+++ b/src/index.scss
@@ -11,10 +11,6 @@ body {
 #root {
     width: 100%;
     height: 100%;
-    .App {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    }
+    margin: 0;
+    padding: 0;
 }
