--- a/src/features/vehicles/vehicles.scss
+++ b/src/features/vehicles/vehicles.scss
@@ -1,18 +1,112 @@
-@mixin forLargeScreens($media) {
-    @media (min-width: $media/16+em) {
-        @content;
-    }
-}
-
 .vehicles {
+    margin-top: 10px;
     width: 90vw;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: flex-start;
 
-    @include forLargeScreens(640) {
-        width: 100vw;
-        background: blue;
+    .content,
+    .overlay {
+        grid-area: 1 / 1;
+    }
+
+    .content {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+
+        .vehicle {
+            display: flex;
+            flex-direction: column;
+            flex: 0 0 20rem;
+            margin: 10px;
+            background-color: #f8f9fa;
+            background-clip: border-box;
+            border: 1px solid rgba(0, 0, 0, 0.125);
+            border-radius: 0.25rem;
+
+            .header {
+                display: flex;
+                justify-content: space-between;
+                padding: 0.75rem 1.25rem;
+                margin-bottom: 0;
+                color: whitesmoke;
+                background-color: rgb(24, 162, 184);
+                border-bottom: 1px solid #18a2b861;
+                border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+                font-weight: 500;
+            }
+
+            .detail {
+                display: flex;
+                flex-flow: row wrap;
+                padding: 10px;
+
+                span {
+                    color: #17a2b8;
+                    border: 1px solid #17a2b8;
+                    font-weight: 400;
+                    text-align: center;
+                    white-space: nowrap;
+                    vertical-align: middle;
+                    padding: 0.375rem 0.75rem;
+                    margin: 5px;
+                    font-size: 1rem;
+                    line-height: 1.5;
+                    border-radius: 0.25rem;
+                    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+                        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+                    &:hover {
+                        color: whitesmoke;
+                        background-color: #17a2b8;
+                    }
+                }
+            }
+        }
+
+        .empty {
+            display: flex;
+            color: white;
+            background-color: grey;
+            border-color: #ebccd1;
+            border-radius: 5px;
+            padding: 0 15px;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 15px;
+        }
+    }
+
+    .overlay {
+        flex: 0 0 90vw;
+        display: flex;
+        color: #a94442;
+        background-color: #f2dede;
+        border-color: #ebccd1;
+        padding: 0 15px;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 15px;
+
+        button {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+            font-size: 15px;
+            border-radius: 5px;
+            height: 30px;
+            width: 100px;
+            outline: none;
+        }
+
+        &.hide {
+            display: none;
+        }
+    }
+
+    @media (min-width: 640/16+em) {
+        width: 75vw;
     }
 }
