--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+
+    .nav {
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+
+        img {
+            height: 30px;
+            margin-right: 10px;
+        }
+    }
 }
