--- a/src/features/filters/filters.scss
+++ b/src/features/filters/filters.scss
@@ -49,6 +49,14 @@
     }
 
     @media (min-width: 640/16+em) {
-        width: 75vw;
+        width: 80vw;
+        display: flex;
+        flex-direction: row;
+
+        .make,
+        .model {
+            flex: 0 0 49%;
+            padding: 0 5px;
+        }
     }
 }
